code with python files

--- a/retail_order.ipynb
+++ b/retail_order.ipynb
@@ -738,7 +738,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "retail-data-pipeline (1)",
+   "notebookName": "retail_order",
    "widgets": {}
   },
   "language_info": {
