--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -10,6 +10,30 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "eabfe52b-c240-40df-b50f-16c6b47ce81a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "# Enables autoreload; learn more at https://docs.databricks.com/en/files/workspace-modules.html#autoreload-for-python-modules\n",
+    "# To disable autoreload; run %autoreload 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "058e0a82-fdd8-49a0-88d5-bf8ce536b1c0",
      "showTitle": false,
      "tableResultSettingsMap": {},
